# matplotlib

./: pyproject.toml  setup.py
.github/workflows/: tests.yml
doc/api/: index.rst
doc/api/next_api_changes/deprecations/: 23200-OG.rst
doc/users/next_whats_new/: colorbar_has_location_argument.rst  mathtext_supports_text.rst
examples/axes_grid1/: demo_axes_vbox_divider.py
examples/lines_bars_and_markers/: multivariate_marker_plot.py
lib/matplotlib/: _mathtext.py  backend_bases.py  collections.py  colorbar.py  figure.py  legend_handler.py  lines.py  markers.py  patches.py  path.py  patheffects.py  text.py  textpath.py
lib/matplotlib/axes/: _axes.py  _base.py
lib/matplotlib/backends/: _backend_tk.py  backend_svg.py
lib/matplotlib/tests/: test_backend_svg.py  test_collections.py  test_colorbar.py  test_legend.py  test_lines.py  test_patches.py
lib/mpl_toolkits/axes_grid1/: anchored_artists.py  axes_divider.py  axes_rgb.py
lib/mpl_toolkits/axisartist/: axis_artist.py  axislines.py
lib/mpl_toolkits/mplot3d/: art3d.py  axes3d.py  axis3d.py  proj3d.py
lib/mpl_toolkits/tests/: test_axes_grid1.py
