[project]
name = "matplotlib"
description = "Python plotting package"
readme = "README.rst"
license = { file = "LICENSE/LICENSE" }
dynamic = ["authors", "version"]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Framework :: Matplotlib',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'License :: OSI Approved :: Python Software Foundation License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering :: Visualization',
]
dependencies = [
    "contourpy>=1.0.1",
    "cycler>=0.10",
    "fonttools>=4.22.0",
    "kiwisolver>=1.0.1",
    "numpy>=1.19",
    "packaging>=20.0",
    "pillow>=6.2.0",
    "pyparsing>=2.2.1",
    "python-dateutil>=2.7",
    "setuptools_scm"
]
requires-python = ">=3.8"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=7",
    "wheel",
    "certifi>=2020.06.20",
    "oldest-supported-numpy"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
write_to = "lib/matplotlib/_version.py"
parentdir_prefix_version = "matplotlib-"
fallback_version = "0.0+UNKNOWN"

[project.urls]
'Documentation' = 'https://matplotlib.org'
'Source Code' = 'https://github.com/matplotlib/matplotlib'
'Bug Tracker' = 'https://github.com/matplotlib/matplotlib/issues'
'Forum' = 'https://discourse.matplotlib.org/'
'Donate' = 'https://numfocus.org/donate-to-matplotlib'
